--- a/app5K/__alps/vane.html
+++ b/app5K/__alps/vane.html
@@ -33,6 +33,7 @@
     <script src="app/vendor/flubber/build/flubber.min.js"></script>
     <!-- / core script -->
     <script src="app/script/app_core.js"></script>
+    <script src="app/script/app_libs.js"></script>
     <!-- / -->
 
     <!-- ## Custom settings below-->
@@ -51,13 +52,13 @@
 
 <article class="layout-for-article design-for-markup">
 
-<header layer bg>
+<header layer-row bg>
     <h1>Кандава Вана</h1>
 </header>
 
 <p>Шел я ночью из Кандавы в Вану. Вот ведь парадокс — городки маленькие, а дорога между ними совсем нет. Умные люди и при солнечном свете не любят таких долгих прогулок, да только я дурак дураком. А что делать? Времена нынче такие, что никто к себе на сеновал переночевать не пустит, а скорее кинет в тебя коробкой из под сони-эриксона. И закричит: «Проваливай, чертов черт, в свою Вану!». Я и проваливаю, мне же не страшно!</p>
 
-<header layer bg>
+<header layer-row bg>
     <h2>Глава 1</h2>
 </header>
 
@@ -65,10 +66,8 @@
 
 <p>Мне стало интересно как они себя поведут, когда посветлеет. Сразу ли поменяются местами или же будут по привычке гоняться друг за другом в прежнем порядке. И так меня это заинтересовало, что я стал крепко смотреть по сторонам, чтобы разглядеть силуэты и не сводить с них глаз до самого рассвета. Ни крысу, ни кошку я не увидел — кто же их выпустит на дорогу в такое время. Зато, когда глаза привыкли к темноте, я разглядел лисицу.</p>
 
-<aside wrap-sidenote>
-    <section textnote>
-        <p>¹ Потрогал за ягодицу — угодил в темницу</p>
-    </section>
+<aside textnote>
+    ¹ Потрогал за ягодицу — угодил в темницу
 </aside>
 
 <pre>
@@ -85,8 +84,8 @@
 
 <p>— <em>Дядюшка, Ханс!</em> — поздоровался я с хозяином, — <em>расскажите мне про Магдалену Нойер. Почему она бегает как лиса, а стреляет как охотник? И почему от этого у нее так много золотых медалей и ни одного мужа. Тогда как братья Дукурисы и мужья знатные и медаль у них только одна серебрянная на двоих.</em></p>
 
-<aside wrap-sidenote>
-    <section note bg>
+<aside sidenote>
+    <section note>
         <p>Старик налил мне молока, поставил миску с бобами и ломоть мягкого деревенского хлеба. Мне бы твои годы сынок, говорит, я бы и сам как Магдалена встал на лыжи. Потому что как ни крути, а на лыжах куда сподручнее сбегать к соседке за солью. И убежал.</p>
     </section>
 </aside>
@@ -97,8 +96,8 @@
 
 <p>Так и быть, говорю. Теперь всегда буду говорить: здравствуйте, я Зиновий, у меня в рюкзаке есть тельняшка.  И как только я решил быть вежливым, сразу грусть ушла. А тут и рыбный обоз меня нагнал.</p>
 
-<aside wrap-sidenote>
-    <figure note>
+<aside textnote>
+    <figure>
         <img src="../art/ready.svg" height="150" alt="">
     </figure>
 </aside>
@@ -169,8 +168,8 @@
 
 <p>И тогда я сообразил, что в Кабиле живут немного эгоистичные люди. Которые хотят, чтобы у них был и кадиллак, и крем-брюле, и карусель во дворе. А в Сабиле живут люди высокой духовности, желающие счастья и солнца каждому. Мне никак не хочется считать себя эгоистом, но ведь каждый перед этим знаком думает точно так же и сворачивает в Сабиле. Может быть оттого в Кабиле и люди такие, что никто к ним не ходит и вестей добрых не приносит.</p>
 
-<figure illustration bg>
-    <img src="../art/It_Is_Time.jpg" alt="">
+<figure block-row illustration bg>
+    <img src="../art/It_Is_Time.jpg" class="zzz" alt="">
     <figcaption>никто к ним не ходит и вестей добрых не приносит</figcaption>
 </figure>
 
@@ -203,8 +202,11 @@
 <li>конец
 </ul>
 
+<header layer-row bg>
+    <h2>Глава 2</h2>
+</header>
 
-<h2>Глава 2</h2>
+
 
 <p>Не всегда радостно на душе. Как пройду часа два, начнет спина ныть, коленки ультиматум ставить «вот сейчас начнем болеть — и что ты будешь делать?». Присаживаться снова на пять минут нет смысла. Тут есть только два варианта — либо у тебя открывается второе дыхание, либо ты терпишь и ждешь пока откроется второе дыхание. Сразу вспоминается что даже поговорить не с кем. Один ты вышел на эту дорогу, один ты и бредешь по ней. Молчи и думай.</p> 
 
@@ -263,8 +265,9 @@
 <p>Решая эти вопросы усталось не замечается. Пустая серая дорога не пугает, рюкзак не так навязчиво давит вниз. Ты теперь не просто идешь из пункта А в пункт Б (этот нехитрый маршрут совсем скоро закончится, буквально за следующим поворотом). Ты теперь идешь по дороге собственной жизни.</p>
 
 
-
-<h3>Глава собственной жизни</h3>
+<header layer-row bg>
+    <h2>Глава собственной жизни</h2>
+</header>
 
 <p>Иду я иду, а навстречу мне хоккеисты.</p>
 
@@ -306,12 +309,14 @@
 
 <p>И все эти три года и три секунды я думал три слова ёлочкой:</p>
 
-<div style="text-align:center;font-size:1.4em">
-?<br>
-что<br>
-будет<br>
-дальше<br>
-</div>
+<section block bg>
+    <div style="text-align:center;font-size:1.4em">
+    ?<br>
+    что<br>
+    будет<br>
+    дальше<br>
+    </div>
+</section>
 
 <p>Что будет дальше, кого еще я встречу на своем пути? Ведь уже были и хоккеисты с белками, и старики с биатлонистками. Сивки бурки с теремочками и цыгане под скамейками. Что нового уготовила мне эта дорога?</p>
 
@@ -362,7 +367,9 @@
 
 <p>Поднялась метель.</p>
 
-<h3>Глава метель</h3>
+<header layer-row bg>
+    <h2>Глава метель</h2>
+</header>
 
 <pre>
 Сквозь…
@@ -401,7 +408,9 @@
 Кончилась метель. Выжил.
 </pre>
 
-<h3>Последняя</h3>
+<header layer-row bg>
+    <h2>Последняя</h2>
+</header>
 
 <p>Вот уже и знакомый поворот. Мы сюда с братьями бегали по девкам из сельской школы.</p>
 
@@ -417,9 +426,13 @@
 
 <p>Эй! Встречайте меня! Я дома!</p>
 
-<p><small>feb.2010</small></p>
-
-<p><em>Посвящается Мише Ладыженскому,<br>пошедшему короткой дорогой.</em></p>
+<footer layer-row bg>
+    <p><small>feb.2010</small></p>
+    <p><small>markup - oct.2018</small></p>
+    <div textnote>
+        <p><em>Посвящается Мише Ладыженскому,<br>пошедшему короткой дорогой.</em></p>
+    </div>
+</footer>
 
 </article>
 
