--- a/app5K/__alps/vane.html
+++ b/app5K/__alps/vane.html
@@ -58,6 +58,35 @@
 
 <p>Шел я ночью из Кандавы в Вану. Вот ведь парадокс — городки маленькие, а дорога между ними совсем нет. Умные люди и при солнечном свете не любят таких долгих прогулок, да только я дурак дураком. А что делать? Времена нынче такие, что никто к себе на сеновал переночевать не пустит, а скорее кинет в тебя коробкой из под сони-эриксона. И закричит: «Проваливай, чертов черт, в свою Вану!». Я и проваливаю, мне же не страшно!</p>
 
+
+<aside sidenote>
+    <div id="ShowTheMenu" show-sidebar note bg-b is-centered>
+        <h4>ShowTheMenu</h4>
+    </div>
+</aside>
+<aside class="sidebar" block bg bg-b>
+    <div hide-sidebar-error>no close</div>
+    <h2>Sidemenu II</h2>
+    <ul>
+        <li>Item</li>
+    </ul>
+</aside>
+<div class="screen-shadow-overlay" hide-sidebar></div>
+<script>
+    app.do({
+        when: '[show-sidebar]',
+        has: 'click',
+        addClass: 'has-active-sidebar',
+        for: 'html'
+    });
+    app.do({
+        when: '[hide-sidebar]',
+        has: 'click',
+        removeClass: 'has-active-sidebar',
+        for: 'html'
+    });
+</script>
+
 <header layer-row bg>
     <h2>Глава 1</h2>
 </header>
