--- a/app5K/__alps/documentation.html
+++ b/app5K/__alps/documentation.html
@@ -188,8 +188,16 @@ app.do({
     <code>is-merged-row</code>    <span></span>
 </section>
 
+<h3>Named components</h3>
+
+<section wrap-two-columns>
+    <code>screen-footer</code>     <span></span>
+    <code>screen-shadow-overlay</code>     <span></span>
+</section>
 
 <hr divider>
+
+
 
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
