--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -371,14 +371,15 @@
             <section c-dev2>
 
 
-                <span a c>▲▼◄►★※⁎˂˃˄˅</span>
+                <span a c>Ss ▲▼◄► ‹› ←→ ↔ ‖</span>
+                <span a c>Ss ※⁜⁕★⋆∘⚙ ∗⁎ ⁑ ⁂</span>
                 <span a c>
                     <a href="https://en.wikipedia.org/wiki/List_of_Unicode_characters">W</a>
-                    <span>←→ Māčūļī</span>
+                    <span> Māčūļī 💩 ⁐ </span>
                 </span>
                 
                 <figure>
-                    <span a c dh>ʕ⊙ᴥ⊙ʔ</span><span a c>༼°▽°༽</span>
+                    <span a c>ʕ⊙ᴥ⊙ʔ</span><span a c>༼°▽°༽</span>
                 </figure>
             </section>
 
