Demonside html/css/js

--- a/appDev/app6K/content-meta.html
+++ b/appDev/app6K/content-meta.html
@@ -1,11 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!--
-        The following 2 meta tags *must* come first in the <head>
-        to consistently ensure proper document rendering.
-        Any other head element should come *after* these tags.
-        ==================================================== -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -18,7 +13,7 @@
     <meta name="description" content="xoxox_descriptionTEMPLATE_xoxox" />
     <meta name="author"      content="xoxox_ZL_xoxox" />
 
-    <!-- ## SOCIAL -->
+    <!-- ## MICRODATA -->
     <meta property="og:title"        content="xoxox" />
     <meta property="og:description"  content="xoxox" />
     <meta property="og:url"          content="xoxox" />
@@ -52,7 +47,5 @@
     <!-- =================================================== [HEAD OTHERS] -->
 
 </head>
-<body class="design sakura-body">
-
-</body>
+<body></body>
 </html>
