--- a/appDev/app6K/index.html
+++ b/appDev/app6K/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- ========================================= ʕ⊙ᴥ⊙ʔ  -->
-    <!-- ========================================= [HEAD CONTENT] -->
+    <!-- ========================================= HEAD CONTENT -->
 
 
     <title>Documentation</title>
 
 
     <!-- ========================================= ʕ⊙ᴥ⊙ʔ  -->
-    <!-- ========================================= [APP PRIMARY] -->
+    <!-- ========================================= APP PRIMARY -->
 
 
     <script src="app/script/app-avant-garde.js"></script>
@@ -20,7 +20,7 @@
 
 
     <!-- ========================================= ʕ⊙ᴥ⊙ʔ  -->
-    <!-- ========================================= [APP MAIN] -->
+    <!-- ========================================= APP MAIN -->
 
 
     <link  href="app/style/app.css" rel="stylesheet" type="text/css">
@@ -28,7 +28,7 @@
 
 
     <!-- ========================================= ʕ⊙ᴥ⊙ʔ  -->
-    <!-- ========================================= [APP CUSTOM] -->
+    <!-- ========================================= APP CUSTOM -->
 
     <script src="app/script/app-custom-addon.js"></script>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -107,7 +107,7 @@
 
 
 <!-- ========================================= ʕ⊙ᴥ⊙ʔ  -->
-<!-- ========================================= [WORKERS] -->
+<!-- ========================================= APP WORKERS -->
 
 
 <div class="screen-shadow-overlay"></div>
